--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -18,7 +18,7 @@
                         </div>
                         <div class="mtext">
                           <h6>PGA<br><strong>Rentabilidad<br>asegurada</strong> hasta 10% anual</h6>
-                          <a href="PGA.html">Conocé más</a>
+                          <a href="pga.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -27,7 +27,7 @@
                         </div>
                         <div class="mtext">
                           <h6>Forestales<br><strong>Rentabilidad<br></strong>de 7% a 12%<br>anual</h6>
-                          <a href="Negocios.html">Conocé más</a>
+                          <a href="negocios.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -36,7 +36,7 @@
                         </div>
                         <div class="mtext">
                           <h6><strong>Negocios Ganaderos<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
-                           <a href="Administracion.html">Conocé más</a>
+                           <a href="administracion.html">Conocé más</a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -45,14 +45,14 @@
                         </div>
                         <div class="mtext">
                           <h6><strong>Negocios Inmobiliarios<br></strong> hasta 9% anual<br>larrarteurbano.com.uy</h6>
-                          <a href="Administracion.html">Conocé más</a>
+                          <a href="administracion.html">Conocé más</a>
                         </div>
                       </span></div>
                     </div>
                   </div>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="Nosotros.html">Nosotros</a>
+                  <a class="nav-link" href="nosotros.html">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Soy inversor</a>
@@ -65,4 +65,11 @@
           </nav>
         </div>
       </div>
+    </div>
+    <div id="whatsappBtn">
+      <a href="#" target="_blank" onclick="_blank">
+        <button>
+          <img src="assets/images/whatsapp.png" alt="Larrarte">
+        </button>
+      </a>
     </div>
