--- a/assets/styles/scss/components/_navbar.scss
+++ b/assets/styles/scss/components/_navbar.scss
@@ -17,12 +17,17 @@ header {
     // }
     .navbar-expand-lg {
          justify-content: space-between;
-         .nav-item:active, .nav-item:hover {
-        background-color: #DEB83D;
-        a{
-            color: #2b233a !important;
+         align-items: stretch;
+        .nav-item:active, .nav-item:hover {
+            background-color: #DEB83D;
+            .navbar-brand{
+                padding-top: .8rem;
+                padding-bottom: .8rem;
+            }
+            a{
+                color: #2b233a !important;
+            }
         }
-    }
     }
     .navbar-collapse {
         width: 100%;
@@ -35,7 +40,6 @@ header {
             height: 71px;
             display: flex;
             flex-direction: column;
-            align-items: center;
             justify-content: center;
         }
     }
@@ -66,11 +70,7 @@ header {
             color: $primary !important;
             text-decoration: none;
         }
-        // .mtext{ a:hover{
-        //     border-color: #deb83d;
-        //     border-bottom: 1px solid;
-        //     color: $white !important;
-        // }}
+
         span.dropdown-item {
 
             display: flex;
