--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -825,7 +825,11 @@ section#benefits{
       a.btn.btn-primary {
        top: 365px;
       }
+      .ibottom{
+        margin-bottom: 20px;
+      }
     }
+
   }
 }
 @media (max-width: 380px) {
