--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -326,8 +326,8 @@ section#image-banner{
     flex-direction: column;
     justify-content: center;
     background-position: center;
-    padding: 69px 0;
-    margin-top: 66px;
+    height: 70vh;
+    margin-top: 80px;
   h1{
     color: $white;
     font-weight: 600;
@@ -639,16 +639,15 @@ section#card-experience{
 //--------------------------------------------Negocios.HTML----------------------------------------//
 //----------------------------nimage-banner---------------------------------//
 section#nimage-banner{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/menu3.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../../images/negocios.png);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-position: center;
-    height: 100vh;
-    max-height: 100%;
-    overflow: overlay;
+    height: 70vh;
+    margin-top: 66px;
   h1{
     color: $white;
     font-weight: 600;
@@ -765,6 +764,12 @@ section#benefits{
       margin-bottom: 10px;
     }
   }
+  section#image-banner{
+    height: 60vh;
+  }
+  section#nimage-banner{
+    height: 60vh;
+  }
   section#dynamic-table{
     .container-fluid {
     padding: 0 8%;
@@ -857,6 +862,7 @@ section#benefits{
   }
 
 
+
 }
 
 @media (max-width: 575px) {
@@ -899,6 +905,12 @@ section#benefits{
       }
     }
 
+  }
+  section#image-banner{
+    height: 40vh;
+  }
+  section#nimage-banner{
+    height: 40vh;
   }
   section#dynamic-table{
     .container-fluid {
