--- a/assets/components/footer.html
+++ b/assets/components/footer.html
@@ -15,7 +15,7 @@
         </div>
         <div class="col-lg-4 col-12 contact3">
           <div class="contac-img">
-            <img src="assets/images/group-footer.png" alt="Larrarte" class="logo">
+            <img src="assets/images/group-footer.png" alt="Larrarte" class="logo img-fluid">
           </div>
           <div class="contac-red">
             <a href="#" target="_blank" onclick='return false' ><img src="assets/images/facebook.svg" alt="Facebook" class="ifooter3"></a>
