--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -17,7 +17,9 @@
                           <img src="assets/images/menu1.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6>PGA<br><strong>Rentabilidad<br>asegurada</strong> hasta 10% anual</h6>
+                          <h6 style="font-weight: 400">PGA</h6>
+                          <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
+                          <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
                           <a href="pga.html">Conocé más</a>
                         </div>
                       </span></div>
@@ -26,7 +28,9 @@
                           <img src="assets/images/menu3.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6>Forestales<br><strong>Rentabilidad<br></strong>de 7% a 12%<br>anual</h6>
+                          <h6 style="font-weight: 400">Forestales</h6>
+                          <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
+                          <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
                           <a href="negocios.html">Conocé más</a>
                         </div>
                       </span></div>
@@ -35,7 +39,8 @@
                           <img src="assets/images/menu2.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6><strong>Negocios Ganaderos<br></strong>Administración, <br>Remates, Inmobiliaria</h6>
+                          <h6 style="font-weight: 700">Negocios Ganaderos<h6>
+                          <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
                            <a href="administracion.html">Conocé más</a>
                         </div>
                       </span></div>
@@ -44,7 +49,8 @@
                           <img src="assets/images/menu4.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6><strong>Negocios Inmobiliarios<br></strong> hasta 9% anual<br>larrarteurbano.com.uy</h6>
+                          <h6 style="font-weight: 700">Negocios Inmobiliarios
+                          <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
                           <a href="administracion.html">Conocé más</a>
                         </div>
                       </span></div>
