--- a/assets/styles/scss/components/_footer.scss
+++ b/assets/styles/scss/components/_footer.scss
@@ -42,7 +42,8 @@ footer{
 @media (max-width: 1199.98px) {}
 
 @media (max-width: 991.98px) {
-    footer{
+  footer{
+    padding: 12vh 5vh;
     text-align: left;
     h5{
       margin-bottom: 30px;
