--- a/assets/components/header.html
+++ b/assets/components/header.html
@@ -17,10 +17,12 @@
                           <img src="assets/images/menu1.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6 style="font-weight: 400">PGA</h6>
-                          <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
-                          <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
-                          <a href="pga.html">Conocé más</a>
+                          <a href="pga.html">
+                            <h6 style="font-weight: 400">PGA</h6>
+                            <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad<br>asegurada</h6>
+                            <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 10% anual</h6>
+                            <span style="color: #DEB83D">Conocé más</span>
+                          </a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -28,10 +30,12 @@
                           <img src="assets/images/menu3.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6 style="font-weight: 400">Forestales</h6>
-                          <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
-                          <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
-                          <a href="negocios.html">Conocé más</a>
+                          <a href="negocios.html">
+                            <h6 style="font-weight: 400">Forestales</h6>
+                            <h6 class="d-lg-block d-none" style="font-weight: 700">Rentabilidad</h6>
+                            <h6 class="d-lg-block d-none" style="font-weight: 400">de 7% a 12%<br>anual</h6>
+                            <span style="color: #DEB83D">Conocé más</span>
+                          </a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -39,9 +43,11 @@
                           <img src="assets/images/menu2.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6 style="font-weight: 700">Negocios Ganaderos<h6>
-                          <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
-                           <a href="administracion.html">Conocé más</a>
+                          <a href="administracion.html">
+                            <h6 style="font-weight: 700">Negocios Ganaderos<h6>
+                            <h6 class="d-lg-block d-none" style="font-weight: 400">Administración, <br>Remates, Inmobiliaria</h6>
+                             <span style="color: #DEB83D">Conocé más</span>
+                          </a>
                         </div>
                       </span></div>
                       <div class="imenu"><span class="dropdown-item">
@@ -49,9 +55,11 @@
                           <img src="assets/images/menu4.png" alt="Larrarte">
                         </div>
                         <div class="mtext">
-                          <h6 style="font-weight: 700">Negocios Inmobiliarios
-                          <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
-                          <a href="administracion.html">Conocé más</a>
+                          <a href="administracion.html">
+                            <h6 style="font-weight: 700">Negocios Inmobiliarios
+                            <h6 class="d-lg-block d-none" style="font-weight: 400">hasta 9% anual<br>larrarteurbano.com.uy</h6>
+                            <span style="color: #DEB83D">Conocé más</span>
+                          </a>
                         </div>
                       </span></div>
                     </div>
