--- a/assets/styles/scss/components/_master.scss
+++ b/assets/styles/scss/components/_master.scss
@@ -19,16 +19,10 @@ a,p,div,input,button,textarea{
   font-size: 1rem;
   font-weight: 400;
 }
-a{
-  font-size: 1rem;
-
-}
-
 section {
   position: relative;
   padding: 8vh 0;
 }
-
 .btn.btn-primary {
   background-color: $primary;
   border-color: $primary;
@@ -39,14 +33,16 @@ section {
   border-radius: 29px;
   opacity: 1;
 }
-
+button:focus {
+    outline: none;
+}
 .btn.btn-primary:hover, .btn.btn-primary:active, .btn.btn-primary:focus{
   background-color: hsl(46deg 50% 50%) !important;
   border-color: hsl(46deg 50% 50%) !important;
   box-shadow: 0px 3px 6px #00000029;
   transition: .3s ease;
 }
-
+//--------------------------------------------Index.HTML----------------------------------------//
 //-------------SECTION IMAGE-CAROUSEL---------------------//
 section#image-carousel{
   padding:0;
@@ -73,7 +69,7 @@ section#image-carousel{
   }
   .owl-theme .owl-nav [class*=owl-] {
     margin: 0px;
-}
+  }
   .owl-prev {
     width: 69px;
     height: 69px;
@@ -223,26 +219,22 @@ section#managementI{
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
-    // display: grid;
-    // grid-template-columns: 1fr 1fr 1fr;
     max-width: 835px;
     max-height: 211px;
     width: 100%;
     height: 100%;
     margin-top: 16px;
-
     img{
-    width: 100px;
-    margin-bottom: 15px;
-    max-height: 96px;
-    height: 100%;
+      width: 100px;
+      margin-bottom: 15px;
+      max-height: 96px;
+      height: 100%;
     }
   }
   a.btn.btn-primary {
     position: absolute;
     bottom: -23px;
   }
-
   h3{
     color: $textgray;
     font-weight: 700;
@@ -341,61 +333,64 @@ section#image-banner{
 section#dynamic-table{
   .container-fluid {
     padding: 0 8%;
-}
-    .owl-prev {
-    width: 46px;
-    height: 51px;
-    position: absolute;
-    top: 40%;
-    left: -10%;
-    background-color: #deb83d;
-    color: #b2b2b2;
-  }
-  .owl-next {
-    width: 46px;
-    height: 51px;
-    position: absolute;
-    top: 40%;
-    right: -10%;
-    background-color: #deb83d;
-    color: #b2b2b2;
-  }
-  .owl-prev span {
-    display: block;
-    background-image: url(../../images/arrow-left-solid.svg);
-    background-repeat: no-repeat;
-    filter: invert(1);
-    width: 23px;
-    height: 22px;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    color: #2B233A98;
-  }
-  .owl-next span {
-    display: block;
-    background-image: url(../../images/arrow-right-solid.svg);
-    background-repeat: no-repeat;
-    filter: invert(1);
-    width: 23px;
-    height: 22px;
-    left: 0;
-    right: 0;
-    margin-left: auto;
-    margin-right: auto;
-    color: #2B233A98;
-  }
-  h6{
-    color: $white;
-  }
-  p{
-    font-weight: 700;
-    font-size: 1rem;
-  }
-  .item{
-    text-align: center;
-  }
+    h5.text-center {
+      margin-bottom: 78px;
+      margin-top: 67px;
+    }
+      .owl-prev {
+      width: 46px;
+      height: 51px;
+      position: absolute;
+      top: 40%;
+      left: -10%;
+      background-color: #deb83d;
+      color: #b2b2b2;
+    }
+    .owl-next {
+      width: 46px;
+      height: 51px;
+      position: absolute;
+      top: 40%;
+      right: -10%;
+      background-color: #deb83d;
+      color: #b2b2b2;
+    }
+    .owl-prev span {
+      display: block;
+      background-image: url(../../images/arrow-left-solid.svg);
+      background-repeat: no-repeat;
+      filter: invert(1);
+      width: 23px;
+      height: 22px;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+      color: #2B233A98;
+    }
+    .owl-next span {
+      display: block;
+      background-image: url(../../images/arrow-right-solid.svg);
+      background-repeat: no-repeat;
+      filter: invert(1);
+      width: 23px;
+      height: 22px;
+      left: 0;
+      right: 0;
+      margin-left: auto;
+      margin-right: auto;
+      color: #2B233A98;
+    }
+    h6{
+      color: $white;
+    }
+    p{
+      font-weight: 700;
+      font-size: 1rem;
+    }
+    .item{
+      text-align: center;
+    }
     .list1:not(:last-child){
       border-bottom: 1px solid #00000059;
     }
@@ -409,7 +404,6 @@ section#dynamic-table{
       .text-list p{
         color: white;
         font-weight: 400;
-
       }
       .img-list {
         width: 40px;
@@ -421,30 +415,33 @@ section#dynamic-table{
         }
       }
     }
-
-
-  .list-group-item:not(:last-child) {
-    border-bottom: 1px solid #373948;
-  }
-  .list-group-item{
-  padding: 0.5rem 0.5rem;
-  }
-  .card{
-    border:none;
-    border-radius: 0;
-    .list-group.list-group-flush {
-      box-shadow: 0px 3px 6px #00000029;
-      margin-bottom: 18px;
+    .list-group-item:not(:last-child) {
+      border-bottom: 1px solid #373948;
     }
-  }
-  .card.prueba {
-    margin-top: 190px;
-  }
-  .card-textp {
-    text-align: initial;
-  }
-  .card-header{
-    border-radius: 0;
+    .list-group-item{
+    padding: 0.5rem 0.5rem;
+    }
+    .card{
+      border:none;
+      border-radius: 0;
+      .list-group.list-group-flush {
+        box-shadow: 0px 3px 6px #00000029;
+        margin-bottom: 18px;
+      }
+    }
+    .card.prueba {
+      margin-top: 208px;
+    }
+    .card-textp {
+      text-align: initial;
+    }
+    .card-header{
+      border-radius: 0;
+      padding: 21px 0;
+      h4{
+        margin-bottom: 0;
+      }
+    }
   }
 }
 //----------------------------scheme---------------------------------//
@@ -587,7 +584,7 @@ section#cabins{
   }
 }
 //--------------------------------------------Administracion.HTML----------------------------------------//
-//----------------------------company---------------------------------//
+//----------------------------IMAGE-ABANNER---------------------------------//
 section#image-abanner{
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1)),  url(../../images/menu2.jpg);
     background-size: cover;
@@ -604,7 +601,7 @@ section#image-abanner{
   }
   h1.display-4{
     color: $white;
-    font-weight: bold;
+    font-weight: 700;
   }
 }
 //----------------------------experience---------------------------------//
@@ -612,7 +609,7 @@ section#experience{
   background-color: $primary;
   padding: 6vh 0;
   h2{
-    font-weight: bold;
+    font-weight: 700;
     text-align: center;
   }
 }
@@ -625,7 +622,6 @@ section#card-experience{
       border: none;
       border-radius: 0;
       .row.g-0 {
-        // align-items: center;
         .img-fluid {
           width: 100%;
         }
@@ -714,8 +710,10 @@ section#benefits{
 
 @media (max-width: 991px) {
   section {
-    padding: 8vh 5vh;
+    padding: 8vh 2vh;
   }
+//--------------------------------------------Index.HTML----------------------------------------//
+//-------------SECTION IMAGE-CAROUSEL---------------------//
   section#image-carousel {
     h1.fb{
       font-weight: 900;
@@ -738,6 +736,13 @@ section#benefits{
       height: 20px;
     }
   }
+//-------------SECTION Are-Have---------------------//
+  section#are-have{
+    .gif{
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+//-------------SECTION INVESTMENT---------------------//
   section#investment{
     .ipadding{
       padding: 0 25px;
@@ -751,11 +756,7 @@ section#benefits{
       justify-content: center;
     }
   }
-  section#are-have{
-    .gif{
-      grid-template-columns: 1fr 1fr;
-    }
-  }
+//-------------SECTION MANAGEMENTI---------------------//
   section#managementI{
     padding: 6vh 5vh;
     .giftransparent{
@@ -769,10 +770,8 @@ section#benefits{
     .ranchers {
       padding-top: 20px;
     }
-    // a.btn.btn-primary {
-    //   top: 755px;
-    // }
   }
+//-------------SECTION MANAGEMENTII---------------------//
   section#managementII{
     padding: 5vh 3vh;
     img{
@@ -782,26 +781,37 @@ section#benefits{
       margin-bottom: 10px;
     }
   }
-  // section#image-banner{
-  //   height: 60vh;
-  // }
-  // section#nimage-banner{
-  //   height: 60vh;
-  // }
+//-----------------SECTION CONTACT---------------------//
+  section#contact {
+    padding: 12vh 3vh;
+  }
+//--------------------------------------------PGA.HTML----------------------------------------//
+//------------------SECTION DYNAMIC-TABLE-----------------------//
   section#dynamic-table{
     .container-fluid {
-    padding: 0 8%;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-    .card.prueba{
-      margin-top: 180px;
+      padding: 0 8%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      h5.text-center {
+        margin-bottom: 60px;
+        margin-top: 0;
+      }
+      .card.prueba {
+        margin-top: 195px;
+      }
+      .owl-prev {
+        left: -13%;
+      }
+      .owl-next {
+        right: -13%;
+      }
     }
   }
+//--------------------SECTION SCHEME---------------------------//
   section#scheme{
-    padding: 8vh 0;
+    padding: 8vh 3vh;
     .display-5{
       margin-bottom: 30px;
     }
@@ -812,10 +822,12 @@ section#benefits{
       }
     }
   }
+//--------------------SECTION QUESTIONS---------------------------//
   section#questions{
     padding: 8vh 0;
   }
-
+//-----------------------------------Administracion.HTML---------------------------------------//
+//-------------------SECTION CARD-EXPERIENCE---------------------//
   section#card-experience{
     .itrevert {
       flex-direction: column-reverse;
@@ -832,7 +844,7 @@ section#benefits{
       }
     }
   }
-
+//----------------------SECTION BENEFITS-----------------------//
   section#benefits{
     padding: 8vh 0;
     display: flex;
@@ -848,12 +860,11 @@ section#benefits{
       grid-gap: 50px;
     }
   }
-  section#contact {
-    padding: 12vh 3vh;
-  }
 }
 
 @media (max-width: 767px) {
+//--------------------------------------------Index.HTML----------------------------------------//
+//-------------SECTION IMAGE-CAROUSEL---------------------//
   section#image-carousel {
     .owl-prev {
     width: 50px;
@@ -872,6 +883,7 @@ section#benefits{
       height: 20px;
     }
   }
+//-------------SECTION INVESTMENT---------------------//
   section#investment{
     padding: 5vh 0;
    .investment{
@@ -881,12 +893,23 @@ section#benefits{
       }
     }
   }
-
-
-
+//--------------------------------------------PGA.HTML----------------------------------------//
+//------------------SECTION DYNAMIC-TABLE-----------------------//
+  section#dynamic-table{
+    .container-fluid {
+      .owl-prev {
+        left: -14%;
+      }
+      .owl-next {
+        right: -14%;
+      }
+    }
+  }
 }
 
 @media (max-width: 575px) {
+//--------------------------------------------Index.HTML----------------------------------------//
+//-------------SECTION IMAGE-CAROUSEL---------------------//
   section#image-carousel {
     .owl-prev {
       width: 30px;
@@ -905,12 +928,14 @@ section#benefits{
       height: 14px;
     }
   }
+//-------------SECTION Are-Have---------------------//
   section#are-have{
     .gif{
       grid-template-columns: 1fr;
       grid-gap: 30px;
     }
   }
+//-------------SECTION INVESTMENT---------------------//
   section#investment{
     .investment{
       height: 390px;
@@ -921,36 +946,53 @@ section#benefits{
         margin-bottom: 20px;
       }
     }
-
   }
+//--------------------------------------------PGA.HTML----------------------------------------//
+//------------------SECTION IMAGE-BANNER-------------------------//
   section#image-banner{
     height: 50vh;
   }
-  section#nimage-banner{
-    height: 50vh;
-  }
+//------------------SECTION DYNAMIC-TABLE-----------------------//
   section#dynamic-table{
     .container-fluid {
       padding: 0 10%;
-
+      .card.prueba{
+        margin-top: 150px;
+      }
       .owl-prev {
-        left: -14%;
+        left: -18%;
       }
       .owl-next {
-        right: -14%;
+        right: -18%;
+      }
+    }
+  }
+//-----------------------------------------Negocios.HTML--------------------------------------//
+//-----------------SECTION NIMAGE-BANNER-------------------------//
+  section#nimage-banner{
+    height: 50vh;
+  }
+}
+@media (max-width: 425px) {
+//--------------------------------------------PGA.HTML----------------------------------------//
+//------------------SECTION DYNAMIC-TABLE-----------------------//
+  section#dynamic-table{
+    .container-fluid{
+      .owl-prev {
+        left: -21%;
+      }
+      .owl-next {
+        right: -21%;
       }
     }
   }
 }
 @media (max-width: 380px) {
+//--------------------------------------------Index.HTML----------------------------------------//
+//-------------SECTION INVESTMENT---------------------//
   section#investment{
     .investment{
       padding: 10px;
     }
   }
-  // section#managementI{
-  //   a.btn.btn-primary {
-  //     top: 760px;
-  //   }
-  // }
 }
